# simple-google-health

./: .gitignore  LICENSE  README.md  pyproject.toml
src/google_health/: __init__.py  client.py  google_health.py
