[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-google-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Walker Grier", email = "62007305+walkergrier@users.noreply.github.com" }
]
dependencies = [
    "google>=3.0.0",
    "google-auth-oauthlib>=1.4.0",
    "requests>=2.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/google_health"]
